--- a/examples/QAOA_iterative_interpolation_SK.ipynb
+++ b/examples/QAOA_iterative_interpolation_SK.ipynb
@@ -29,10 +29,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
       "Looking in indexes: https://artifacts-read.gkp.jpmchase.net/artifactory/api/pypi/pypi/simple\n",
-      "Requirement already satisfied: nlopt in /home/jpmcnobody/conda/miniconda3/lib/python3.8/site-packages (2.7.1)\n",
-      "Requirement already satisfied: joblib in /home/jpmcnobody/conda/miniconda3/lib/python3.8/site-packages (1.4.2)\n",
-      "Requirement already satisfied: numpy>=1.14 in /home/jpmcnobody/conda/miniconda3/lib/python3.8/site-packages (from nlopt) (1.24.4)\n"
+      "Requirement already satisfied: nlopt in /efsMount/R753585/brajesh/.local/lib/python3.8/site-packages (2.7.1)\n",
+      "Requirement already satisfied: joblib in /efsMount/R753585/brajesh/.local/lib/python3.8/site-packages (1.4.2)\n",
+      "Requirement already satisfied: numpy>=1.14 in /efsMount/R753585/brajesh/.local/lib/python3.8/site-packages (from nlopt) (1.24.4)\n"
      ]
     }
    ],
@@ -486,7 +487,114 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "brajesh-7c968f6698-5vms7:pid984: PSM3 can't open nic unit: 0 (err=23)\n",
+      "brajesh-7c968f6698-5vms7:pid984: PSM3 can't open nic unit: 0 (err=23)\n",
+      "brajesh-7c968f6698-5vms7:pid984: PSM3 can't open nic unit: 0 (err=23)\n",
+      "brajesh-7c968f6698-5vms7:pid985: PSM3 can't open nic unit: 0 (err=23)\n",
+      "brajesh-7c968f6698-5vms7:pid985: PSM3 can't open nic unit: 0 (err=23)\n",
+      "brajesh-7c968f6698-5vms7:pid985: PSM3 can't open nic unit: 0 (err=23)\n",
+      "brajesh-7c968f6698-5vms7:pid986: PSM3 can't open nic unit: 0 (err=23)\n",
+      "brajesh-7c968f6698-5vms7:pid986: PSM3 can't open nic unit: 0 (err=23)\n",
+      "brajesh-7c968f6698-5vms7:pid986: PSM3 can't open nic unit: 0 (err=23)\n",
+      "brajesh-7c968f6698-5vms7:pid983: PSM3 can't open nic unit: 0 (err=23)\n",
+      "brajesh-7c968f6698-5vms7:pid983: PSM3 can't open nic unit: 0 (err=23)\n",
+      "brajesh-7c968f6698-5vms7:pid983: PSM3 can't open nic unit: 0 (err=23)\n",
+      "brajesh-7c968f6698-5vms7:pid984: brajesh-7c968f6698-5vms7:pid983: PSM3 can't open nic unit: 0 (err=23)PSM3 can't open nic unit: 0 (err=23)\n",
+      "\n",
+      "brajesh-7c968f6698-5vms7:pid985: PSM3 can't open nic unit: 0 (err=23)\n",
+      "--------------------------------------------------------------------------\n",
+      "Open MPI failed an OFI Libfabric library call (fi_endpoint).  This is highly\n",
+      "unusual; your job may behave unpredictably (and/or abort) after this.\n",
+      "\n",
+      "  Local host: brajesh-7c968f6698-5vms7\n",
+      "  Location: mtl_ofi_component.c:513\n",
+      "  Error: Invalid argument (22)\n",
+      "--------------------------------------------------------------------------\n",
+      "--------------------------------------------------------------------------\n",
+      "Open MPI failed an OFI Libfabric library call (fi_endpoint).  This is highly\n",
+      "unusual; your job may behave unpredictably (and/or abort) after this.\n",
+      "\n",
+      "  Local host: brajesh-7c968f6698-5vms7\n",
+      "  Location: mtl_ofi_component.c:513\n",
+      "  Error: Invalid argument (22)\n",
+      "--------------------------------------------------------------------------\n",
+      "--------------------------------------------------------------------------\n",
+      "Open MPI failed an OFI Libfabric library call (fi_endpoint).  This is highly\n",
+      "unusual; your job may behave unpredictably (and/or abort) after this.\n",
+      "\n",
+      "  Local host: brajesh-7c968f6698-5vms7\n",
+      "  Location: mtl_ofi_component.c:513\n",
+      "  Error: Invalid argument (22)\n",
+      "--------------------------------------------------------------------------\n",
+      "brajesh-7c968f6698-5vms7:pid986: PSM3 can't open nic unit: 0 (err=23)\n",
+      "--------------------------------------------------------------------------\n",
+      "Open MPI failed an OFI Libfabric library call (fi_endpoint).  This is highly\n",
+      "unusual; your job may behave unpredictably (and/or abort) after this.\n",
+      "\n",
+      "  Local host: brajesh-7c968f6698-5vms7\n",
+      "  Location: mtl_ofi_component.c:513\n",
+      "  Error: Invalid argument (22)\n",
+      "--------------------------------------------------------------------------\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "brajesh-7c968f6698-5vms7:pid984.python: Failed to get eth0 (unit 0) cpu set\n",
+      "brajesh-7c968f6698-5vms7:pid984.python: Failed to get eth0 (unit 0) cpu set\n",
+      "brajesh-7c968f6698-5vms7:pid984.python: Failed to get eth0 (unit 0) cpu set\n",
+      "brajesh-7c968f6698-5vms7:pid985.python: Failed to get eth0 (unit 0) cpu set\n",
+      "brajesh-7c968f6698-5vms7:pid985.python: Failed to get eth0 (unit 0) cpu set\n",
+      "brajesh-7c968f6698-5vms7:pid985.python: Failed to get eth0 (unit 0) cpu set\n",
+      "brajesh-7c968f6698-5vms7:pid986.python: Failed to get eth0 (unit 0) cpu set\n",
+      "brajesh-7c968f6698-5vms7:pid986.python: Failed to get eth0 (unit 0) cpu set\n",
+      "brajesh-7c968f6698-5vms7:pid986.python: Failed to get eth0 (unit 0) cpu set\n",
+      "brajesh-7c968f6698-5vms7:pid983.python: Failed to get eth0 (unit 0) cpu set\n",
+      "brajesh-7c968f6698-5vms7:pid983.python: Failed to get eth0 (unit 0) cpu set\n",
+      "brajesh-7c968f6698-5vms7:pid983.python: Failed to get eth0 (unit 0) cpu set\n",
+      "brajesh-7c968f6698-5vms7:pid984.python: Failed to get eth0 (unit 0) cpu set\n",
+      "brajesh-7c968f6698-5vms7:pid983.python: Failed to get eth0 (unit 0) cpu set\n",
+      "brajesh-7c968f6698-5vms7:pid985.python: Failed to get eth0 (unit 0) cpu set\n",
+      "brajesh-7c968f6698-5vms7:pid986.python: Failed to get eth0 (unit 0) cpu set\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/efsMount/R753585/brajesh/qiskit2/lib64/python3.11/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 1 will likely result in GPU under-utilization due to low occupancy.\n",
+      "  warn(NumbaPerformanceWarning(msg))\n",
+      "/efsMount/R753585/brajesh/qiskit2/lib64/python3.11/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 1 will likely result in GPU under-utilization due to low occupancy.\n",
+      "  warn(NumbaPerformanceWarning(msg))\n",
+      "/efsMount/R753585/brajesh/qiskit2/lib64/python3.11/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 1 will likely result in GPU under-utilization due to low occupancy.\n",
+      "  warn(NumbaPerformanceWarning(msg))\n",
+      "/efsMount/R753585/brajesh/qiskit2/lib64/python3.11/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 1 will likely result in GPU under-utilization due to low occupancy.\n",
+      "  warn(NumbaPerformanceWarning(msg))\n",
+      "/efsMount/R753585/brajesh/qiskit2/lib64/python3.11/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 1 will likely result in GPU under-utilization due to low occupancy.\n",
+      "  warn(NumbaPerformanceWarning(msg))\n",
+      "/efsMount/R753585/brajesh/qiskit2/lib64/python3.11/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 1 will likely result in GPU under-utilization due to low occupancy.\n",
+      "  warn(NumbaPerformanceWarning(msg))\n",
+      "/efsMount/R753585/brajesh/qiskit2/lib64/python3.11/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 1 will likely result in GPU under-utilization due to low occupancy.\n",
+      "  warn(NumbaPerformanceWarning(msg))\n",
+      "/efsMount/R753585/brajesh/qiskit2/lib64/python3.11/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 1 will likely result in GPU under-utilization due to low occupancy.\n",
+      "  warn(NumbaPerformanceWarning(msg))\n",
+      "/efsMount/R753585/brajesh/qiskit2/lib64/python3.11/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 1 will likely result in GPU under-utilization due to low occupancy.\n",
+      "  warn(NumbaPerformanceWarning(msg))\n",
+      "/efsMount/R753585/brajesh/qiskit2/lib64/python3.11/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 1 will likely result in GPU under-utilization due to low occupancy.\n",
+      "  warn(NumbaPerformanceWarning(msg))\n",
+      "/efsMount/R753585/brajesh/qiskit2/lib64/python3.11/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 1 will likely result in GPU under-utilization due to low occupancy.\n",
+      "  warn(NumbaPerformanceWarning(msg))\n",
+      "/efsMount/R753585/brajesh/qiskit2/lib64/python3.11/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 1 will likely result in GPU under-utilization due to low occupancy.\n",
+      "  warn(NumbaPerformanceWarning(msg))\n"
+     ]
+    }
+   ],
    "source": [
     "N = 6\n",
     "main(N)"
@@ -503,9 +611,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test_ii_pr",
+   "display_name": "qiskit2",
    "language": "python",
-   "name": "test_ii_pr"
+   "name": "qiskit2"
   },
   "language_info": {
    "codemirror_mode": {
