--- a/examples/QAOA_iterative_interpolation_SK.ipynb
+++ b/examples/QAOA_iterative_interpolation_SK.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1a3c91d8-acfc-418a-b47e-08b93358fc4a",
+   "metadata": {},
+   "source": [
+    "This notebook reproduces results from the paper \"Iterative Interpolation Schedules for Quantum Approximate Optimization Algorithm\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "79919c7a-d733-4b85-9263-9643a09e7c0f",
@@ -432,9 +440,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test_ii_pr",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "test_ii_pr"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -446,7 +454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
