Updating qiskit calls to match qiskit==1.3.1.

--- a/examples/QAOA_portfolio_optimization.ipynb
+++ b/examples/QAOA_portfolio_optimization.ipynb
@@ -63,7 +63,15 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YF.download() has changed argument auto_adjust default to True\n"
+     ]
+    }
+   ],
    "source": [
     "po_problem = get_problem(N=6,K=3,q=0.5,seed=1,pre=1)\n",
     "means_in_spins = np.array([po_problem['means'][i] - po_problem['q'] * np.sum(po_problem['cov'][i, :]) for i in range(len(po_problem['means']))])\n",
@@ -168,7 +176,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "energy = 0.004782805426149568, Approximation ratio = 0.767014699611637\n"
+      "energy = -0.01653966594056647, Approximation ratio = 0.6316878993334034\n"
      ]
     }
    ],
@@ -242,7 +250,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "energy = 0.004135567715727546, Approximation ratio = 0.8050399835274252\n"
+      "energy = -0.020417983013216918, Approximation ratio = 0.8160434065665225\n"
      ]
     }
    ],
@@ -264,7 +272,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "energy = 0.004135567763346608, Approximation ratio = 0.8050399807298003\n"
+      "energy = -0.020296733573066175, Approximation ratio = 0.810279823645891\n"
      ]
     }
    ],
@@ -324,21 +332,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "bc26bf47-72ce-4944-9a9f-d217e4c77894",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "from qiskit import execute, Aer\n",
+    "from qiskit_aer import Aer\n",
     "from qokit.utils import reverse_array_index_bit_order\n",
-    "from qokit.qaoa_circuit_portfolio import get_energy_expectation_sv"
+    "from qokit.qaoa_circuit_portfolio import get_energy_expectation_sv\n",
+    "from qiskit import transpile\n",
+    "from qiskit.quantum_info import Statevector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "0c4f35dc-9402-48ce-89ef-c5a80883aaf8",
    "metadata": {
     "tags": []
@@ -347,14 +357,30 @@
    "source": [
     "backend = Aer.get_backend(\"statevector_simulator\")\n",
     "qc = get_qaoa_circuit(po_problem, gammas=x0[:p]/2, betas=x0[p:]/2, depth=p)\n",
-    "result = execute(qc, backend).result()\n",
-    "sv1 = reverse_array_index_bit_order(result.get_statevector())"
+    "circ = transpile(qc, backend)\n",
+    "sv1 = reverse_array_index_bit_order(Statevector(circ))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "id": "8581ac1f-2675-4ccb-b311-ee7e658b2782",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "parameterized_qc = get_parameterized_qaoa_circuit(po_problem, depth=p)\n",
+    "qc2 = parameterized_qc.assign_parameters(np.hstack([x0[p:]/2, x0[:p]/2]))\n",
+    "circ2 = transpile(qc2, backend)\n",
+    "sv2 = reverse_array_index_bit_order(Statevector(circ2))\n",
+    "assert np.allclose(sv1, sv2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "2ceed19a-9391-4eed-95b9-dbfc3b8d6a9d",
    "metadata": {
     "tags": []
    },
@@ -363,27 +389,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_25329/3897112670.py:2: DeprecationWarning: The method ``qiskit.circuit.quantumcircuit.QuantumCircuit.bind_parameters()`` is deprecated as of qiskit 0.45.0. It will be removed no earlier than 3 months after the release date. Use assign_parameters() instead\n",
-      "  qc2 = parameterized_qc.bind_parameters(np.hstack([x0[p:]/2, x0[:p]/2]))\n"
+      "/efsMount/R753585/brajesh/qiskit2/lib64/python3.11/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 1 will likely result in GPU under-utilization due to low occupancy.\n",
+      "  warn(NumbaPerformanceWarning(msg))\n",
+      "/efsMount/R753585/brajesh/qiskit2/lib64/python3.11/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 1 will likely result in GPU under-utilization due to low occupancy.\n",
+      "  warn(NumbaPerformanceWarning(msg))\n",
+      "/efsMount/R753585/brajesh/qiskit2/lib64/python3.11/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 1 will likely result in GPU under-utilization due to low occupancy.\n",
+      "  warn(NumbaPerformanceWarning(msg))\n",
+      "/efsMount/R753585/brajesh/qiskit2/lib64/python3.11/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 1 will likely result in GPU under-utilization due to low occupancy.\n",
+      "  warn(NumbaPerformanceWarning(msg))\n"
      ]
     }
    ],
-   "source": [
-    "parameterized_qc = get_parameterized_qaoa_circuit(po_problem, depth=p)\n",
-    "qc2 = parameterized_qc.bind_parameters(np.hstack([x0[p:]/2, x0[:p]/2]))\n",
-    "result = execute(qc2, backend).result()\n",
-    "sv2 = reverse_array_index_bit_order(result.get_statevector())\n",
-    "assert np.allclose(sv1, sv2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "2ceed19a-9391-4eed-95b9-dbfc3b8d6a9d",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
    "source": [
     "qaoa_obj_qiskit = get_qaoa_portfolio_objective(po_problem=po_problem, p=p, simulator=\"qiskit\", ini=\"dicke\", mixer=\"trotter_ring\", T=1)\n",
     "qaoa_obj_auto = get_qaoa_portfolio_objective(po_problem=po_problem, p=p, simulator=\"auto\", ini=\"dicke\", mixer=\"trotter_ring\", T=1)\n",
@@ -402,9 +418,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "qokit",
+   "display_name": "qiskit2",
    "language": "python",
-   "name": "qokit"
+   "name": "qiskit2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -416,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
