Conditional import of cupy

--- a/examples/QAOA_portfolio_optimization.ipynb
+++ b/examples/QAOA_portfolio_optimization.ipynb
@@ -402,9 +402,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "qokit",
+   "display_name": "qiskit2",
    "language": "python",
-   "name": "qokit"
+   "name": "qiskit2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -416,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
