DWE With Multiprocessing V2

--- a/examples/QAOA_Parallel_Optimization_DWE.ipynb
+++ b/examples/QAOA_Parallel_Optimization_DWE.ipynb
@@ -25,9 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-31T22:40:29.785112Z",
+     "start_time": "2025-05-31T22:40:26.741315Z"
+    }
+   },
    "source": [
     "import numpy as np\n",
     "import os \n",
@@ -48,7 +51,9 @@
     "from qiskit.circuit import ParameterVector\n",
     "from qiskit.primitives import Sampler\n",
     "from qokit.qaoa_circuit_portfolio import get_parameterized_qaoa_circuit"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -61,30 +66,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- Problem Parameters & Custom QUBO Defined for N=20 ---\n",
-      "Number of assets (N): 20\n",
-      "Assets to select (K): 8\n",
-      "QAOA Layers (p): 1\n",
-      "DWE Penalty Lambda_sum: 100\n",
-      "Calculating classical brute-force solution (may take time for N up to 20)...\n",
-      "Brute-force calculation failed: 'scale'\n",
-      "Approximation Ratio will not be calculated.\n",
-      "--------------------------------------------------\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-31T23:15:54.614511Z",
+     "start_time": "2025-05-31T23:15:54.602740Z"
     }
-   ],
+   },
    "source": [
     "## Problem Statement & Setup for Dicke + DWE Technique\n",
     "\n",
     "# Define problem parameters\n",
-    "N = 20 # Number of assets. Change N to your desired value (e.g., 20, 25, 30)\n",
+    "N = 25\n",
+    "# Number of assets. Change N to your desired value (e.g., 20, 25, 30)\n",
     "K = int(N * 0.4) # Example: select 40% of assets. Adjust as needed, ensure K < N.\n",
     "p = 1 # Number of QAOA layers (start with p=1, higher p will be much slower for simulation)\n",
     "\n",
@@ -168,7 +161,23 @@
     "    print(f\"Brute-force calculation is not feasible for N = {N} > 20. Approximation Ratio will not be calculated.\")\n",
     "\n",
     "print(\"-\" * 50)"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Problem Parameters & Custom QUBO Defined for N=25 ---\n",
+      "Number of assets (N): 25\n",
+      "Assets to select (K): 10\n",
+      "QAOA Layers (p): 1\n",
+      "DWE Penalty Lambda_sum: 100\n",
+      "Brute-force calculation is not feasible for N = 25 > 20. Approximation Ratio will not be calculated.\n",
+      "--------------------------------------------------\n"
+     ]
+    }
+   ],
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -181,13 +190,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-31T13:47:03.542897Z",
+     "start_time": "2025-05-31T13:47:03.540954Z"
+    }
+   },
    "source": [
     "# This function is now defined in qaoa_utils.py and imported at the top.\n",
     "# You no longer need to define it here."
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
@@ -200,13 +214,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-31T13:47:04.288209Z",
+     "start_time": "2025-05-31T13:47:04.286022Z"
+    }
+   },
    "source": [
     "# This function is now defined in qaoa_utils.py and imported at the top.\n",
     "# It now takes `po_problem_arg` and `best_portfolio_arg` as explicit arguments."
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 10
   },
   {
    "cell_type": "markdown",
@@ -221,52 +240,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Multiprocessing start method set to 'spawn'.\n",
-      "Starting 6 parallel QAOA optimization runs...\n",
-      "Using up to 4 parallel processes.\n",
-      "Collected result for run 101: Energy=-2400.06141864, AR=N/A (Brute-force not feasible or not computed)\n",
-      "Collected result for run 102: Energy=-2400.06031638, AR=N/A (Brute-force not feasible or not computed)\n",
-      "Collected result for run 103: Energy=-2400.06072690, AR=N/A (Brute-force not feasible or not computed)\n",
-      "Collected result for run 104: Energy=-2400.06012382, AR=N/A (Brute-force not feasible or not computed)\n",
-      "Collected result for run 105: Energy=-2400.06016771, AR=N/A (Brute-force not feasible or not computed)\n",
-      "Collected result for run 106: Energy=-2400.05942422, AR=N/A (Brute-force not feasible or not computed)\n",
-      "Starting optimization run with seed 101 (process 14959)... Completed in 1619.63 seconds.\n",
-      "Run 101 (process 14959): Energy = -2400.06141864\n",
-      "Starting optimization run with seed 103 (process 14961)... Completed in 1658.10 seconds.\n",
-      "Run 103 (process 14961): Energy = -2400.06072690\n",
-      "Starting optimization run with seed 104 (process 14962)... Completed in 1561.54 seconds.\n",
-      "Run 104 (process 14962): Energy = -2400.06012382\n",
-      "Starting optimization run with seed 106 (process 14962)... Completed in 241.62 seconds.\n",
-      "Run 106 (process 14962): Energy = -2400.05942422\n",
-      "Starting optimization run with seed 102 (process 14960)... Completed in 674.87 seconds.\n",
-      "Run 102 (process 14960): Energy = -2400.06031638\n",
-      "Starting optimization run with seed 105 (process 14960)... Completed in 1364.26 seconds.\n",
-      "Run 105 (process 14960): Energy = -2400.06016771\n",
-      "\n",
-      "------------------------------------------------------------\n",
-      "### Summary of All Successful Parallel Optimization Results ###\n",
-      "Seed: 101, Energy: -2400.06141864, AR: N/A (Brute-force not feasible or not computed)\n",
-      "Seed: 103, Energy: -2400.06072690, AR: N/A (Brute-force not feasible or not computed)\n",
-      "Seed: 102, Energy: -2400.06031638, AR: N/A (Brute-force not feasible or not computed)\n",
-      "Seed: 105, Energy: -2400.06016771, AR: N/A (Brute-force not feasible or not computed)\n",
-      "Seed: 104, Energy: -2400.06012382, AR: N/A (Brute-force not feasible or not computed)\n",
-      "Seed: 106, Energy: -2400.05942422, AR: N/A (Brute-force not feasible or not computed)\n",
-      "\n",
-      "------------------------------------------------------------\n",
-      "Best overall energy found: -2400.06141864\n",
-      "Corresponding Approximation Ratio: N/A (Brute-force not feasible or not computed)\n",
-      "Parameters of best run: [-0.50000001  0.39269907]\n",
-      "------------------------------------------------------------\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-01T00:00:44.596797Z",
+     "start_time": "2025-05-31T23:16:07.537486Z"
     }
-   ],
+   },
    "source": [
     "# Initialize these variables outside the if __name__ block\n",
     "# to ensure they are always defined, even if the multiprocessing part isn't run\n",
@@ -284,17 +263,18 @@
     "    num_parallel_runs = 4 # Adjust based on your CPU cores (e.g., os.cpu_count() or os.cpu_count() - 1)\n",
     "    \n",
     "    run_configurations = [\n",
-    "        {'seed': 101, 'p': p},\n",
-    "        {'seed': 102, 'p': p},\n",
-    "        {'seed': 103, 'p': p},\n",
-    "        {'seed': 104, 'p': p},\n",
-    "        {'seed': 105, 'p': p},\n",
-    "        {'seed': 106, 'p': p}\n",
+    "        {'seed': 101, 'p': p, 'max_evals': 1},  # <--- ADDED 'max_evals'\n",
+    "        {'seed': 102, 'p': p, 'max_evals': 1},  # <--- ADDED 'max_evals'\n",
+    "        {'seed': 103, 'p': p, 'max_evals': 1},  # <--- You can vary it per run\n",
+    "        {'seed': 104, 'p': p, 'max_evals': 1},  # <--- ADDED 'max_evals'\n",
+    "        # {'seed': 105, 'p': p, 'max_evals': 10}, # <--- ADDED 'max_evals'\n",
+    "        # {'seed': 106, 'p': p, 'max_evals': 10}  # <--- ADDED 'max_evals'\n",
+    "        # Add more configurations as needed, customizing 'max_evals' for each\n",
     "    ]\n",
     "\n",
     "    all_successful_results = [] # Reset results list before new runs\n",
     "\n",
-    "    print(f\"Starting {len(run_configurations)} parallel QAOA optimization runs...\")\n",
+    "    print(f\"Starting {len(run_configurations)} parallel QAOA optimization runs...N={N}\")\n",
     "    print(f\"Using up to {num_parallel_runs} parallel processes.\")\n",
     "\n",
     "    with ProcessPoolExecutor(max_workers=num_parallel_runs) as executor:\n",
@@ -331,7 +311,44 @@
     "    else:\n",
     "        print(\"No successful optimization runs completed.\")\n",
     "\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multiprocessing start method set to 'spawn'.\n",
+      "Starting 4 parallel QAOA optimization runs...N=25\n",
+      "Using up to 4 parallel processes.\n",
+      "Starting optimization run with seed 102 (process 20451)... Starting optimization run with seed 101 (process 20450)... Starting optimization run with seed 104 (process 20452)... Starting optimization run with seed 103 (process 20453)... Completed in 2668.75 seconds.\n",
+      "Run 104 (process 20452): Energy = -2500.05847170\n",
+      "Completed in 2670.46 seconds.\n",
+      "Run 103 (process 20453): Energy = -2500.05836490\n",
+      "Completed in 2671.70 seconds.\n",
+      "Run 101 (process 20450): Energy = -2500.05785363\n",
+      "Collected result for run 101: Energy=-2500.05785363, AR=N/A (Brute-force not feasible or not computed)\n",
+      "Completed in 2672.65 seconds.\n",
+      "Run 102 (process 20451): Energy = -2500.05731108\n",
+      "Collected result for run 102: Energy=-2500.05731108, AR=N/A (Brute-force not feasible or not computed)\n",
+      "Collected result for run 103: Energy=-2500.05836490, AR=N/A (Brute-force not feasible or not computed)\n",
+      "Collected result for run 104: Energy=-2500.05847170, AR=N/A (Brute-force not feasible or not computed)\n",
+      "\n",
+      "------------------------------------------------------------\n",
+      "### Summary of All Successful Parallel Optimization Results ###\n",
+      "Seed: 104, Energy: -2500.05847170, AR: N/A (Brute-force not feasible or not computed)\n",
+      "Seed: 103, Energy: -2500.05836490, AR: N/A (Brute-force not feasible or not computed)\n",
+      "Seed: 101, Energy: -2500.05785363, AR: N/A (Brute-force not feasible or not computed)\n",
+      "Seed: 102, Energy: -2500.05731108, AR: N/A (Brute-force not feasible or not computed)\n",
+      "\n",
+      "------------------------------------------------------------\n",
+      "Best overall energy found: -2500.05847170\n",
+      "Corresponding Approximation Ratio: N/A (Brute-force not feasible or not computed)\n",
+      "Parameters of best run: [-0.5         0.39269907]\n",
+      "------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -344,47 +361,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "------------------------------------------------------------\n",
-      "### Analyzing the Single Best Result for Optimal Bitstring ###\n",
-      "Using optimal parameters from best run: [-0.50000001  0.39269907]\n",
-      "\n",
-      "--- Sampling for Optimal Bitstring (1024 shots) ---\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/ys/y0scvyd9775b2m623518p1940000gn/T/ipykernel_14941/569512341.py:32: DeprecationWarning: The class ``qiskit.primitives.sampler.Sampler`` is deprecated as of qiskit 1.2. It will be removed no earlier than 3 months after the release date. All implementations of the `BaseSamplerV1` interface have been deprecated in favor of their V2 counterparts. The V2 alternative for the `Sampler` class is `StatevectorSampler`.\n",
-      "  sampler = Sampler()\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Top 5 most frequent bitstrings and their probabilities:\n",
-      "  00000101010100101011: 0.0029\n",
-      "  00000101010101011001: 0.0020\n",
-      "  00010010100101010101: 0.0020\n",
-      "  00010010101010010101: 0.0020\n",
-      "  00010010101010101010: 0.0020\n",
-      "\n",
-      "Most probable portfolio selection (bitstring): 00000101010100101011\n",
-      "Number of selected assets: 8 (Expected K=8)\n",
-      "Classical objective energy for the most probable bitstring: -0.695822\n",
-      "Number of assets selected by most probable bitstring: 8\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-31T22:39:29.123802Z",
+     "start_time": "2025-05-31T22:35:17.726081Z"
     }
-   ],
+   },
    "source": [
     "if __name__ == \"__main__\" and all_successful_results and best_overall_params is not None:\n",
     "    print(\"\\n\" + \"---\" * 20)\n",
@@ -458,14 +440,59 @@
     "        print(f\"Number of assets selected by most probable bitstring: {np.sum(optimal_selection)}\")\n",
     "    else:\n",
     "        print(\"Could not determine optimal bitstring.\")\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "------------------------------------------------------------\n",
+      "### Analyzing the Single Best Result for Optimal Bitstring ###\n",
+      "Using optimal parameters from best run: [-0.5         0.39269907]\n",
+      "\n",
+      "--- Sampling for Optimal Bitstring (1024 shots) ---\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/ys/y0scvyd9775b2m623518p1940000gn/T/ipykernel_17507/649067014.py:32: DeprecationWarning: The class ``qiskit.primitives.sampler.Sampler`` is deprecated as of qiskit 1.2. It will be removed no earlier than 3 months after the release date. All implementations of the `BaseSamplerV1` interface have been deprecated in favor of their V2 counterparts. The V2 alternative for the `Sampler` class is `StatevectorSampler`.\n",
+      "  sampler = Sampler()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 5 most frequent bitstrings and their probabilities:\n",
+      "  00100000101010110101010: 0.0020\n",
+      "  00000000000101111101011: 0.0010\n",
+      "  00000000001010011011111: 0.0010\n",
+      "  00000000001010110110111: 0.0010\n",
+      "  00000000001111110010011: 0.0010\n",
+      "\n",
+      "Most probable portfolio selection (bitstring): 00100000101010110101010\n",
+      "Number of selected assets: 9 (Expected K=9)\n",
+      "Classical objective energy for the most probable bitstring: -0.631863\n",
+      "Number of assets selected by most probable bitstring: 9\n"
+     ]
+    }
+   ],
+   "execution_count": 18
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-31T20:44:50.585833Z",
+     "start_time": "2025-05-31T20:44:50.584063Z"
+    }
+   },
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": null
   }
  ],
  "metadata": {
